# mpr121-hal

./: .gitignore  .markdownlint.json  .megalinter.yaml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  README.md
.github/: CODEOWNERS  dependabot.yaml  pull_request-template.md  release.yaml
.github/workflows/: continuous-build.yaml  mega-linter.yaml  release.yaml
examples/: os_sync_basic.rs
examples/esp32s3/: Cargo.toml
examples/esp32s3/src/: main.rs
src/: communications.rs  constants.rs  lib.rs  mpr121.rs  registers.rs
tests/: linux.rs
tests-common/: Cargo.toml
tests-common/src/: lib.rs
tests/linux/: tests.rs
