[package]
name = "mpr121-hal"
version = "0.5.0"
edition = "2021"
authors = ["Tendsin Mende <tendsin@protonmail.com>"]
repository = "https://gitlab.com/tendsinmende/mpr121-hal"
license = "MIT OR Apache-2.0"
description = "MPR121 proximity capacitive touch sensor controller hal driver implementation."
readme = "README.md"
keywords = [
    "sensor",
    "capacitive",
    "embedded-hal-driver",
    "embedded-hal",
    "hal",
]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://gitlab.com/tendsinmende/mpr121-hal"
documentation = "https://docs.rs/mpr121-hal/latest/"
include = [
    "/src/lib.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]

# Embedded Hal Features
sync = ["dep:embedded-hal", "maybe-async/is_sync"]
async = ["dep:embedded-hal-async"]

[dependencies]
# Embedded HAL traits
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
maybe-async = {version ="0.2.10"}

# FTDI USB driver used for the examples alongside a FTDI FT232H USB to I2C/SPI bridge
# This is not a hard dependency, but it is used in the examples
[dev-dependencies]
ftdi = "0.1.3"
ftdi-embedded-hal = { version = "0.23.0", features = [
    "libftd2xx",
    "libftd2xx-static",
] }
shared-bus = "0.3.1"

