[package]
name = "tests-common"
description = "Common tests for the MPR121 Driver that are cross platform"
version = "0.1.0"
edition = "2021"

[features]


[dependencies]
mpr121-hal = {path="../"}
embedded-hal-bus = { version = "0.3.0" }
maybe-async = {version ="0.2.10"}
# Embedded HAL traits
embedded-hal = { version = "1.0" }

